// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EditFeaturedVideoForm > renders snapshot > EditFeaturedVideoForm 1`] = `
<div>
  <div
    class="m-4 flex max-w-full flex-col gap-(--default-gap) rounded-xl bg-(--color-form-background) lg:my-4 lg:ml-0.5"
    style="opacity: 0; height: 0px;"
  >
    <div
      class="flex justify-between"
    >
      <h3
        class="MuiTypography-root MuiTypography-h2 flex items-center gap-1 text-(--color-typography) css-10p1e2f-MuiTypography-root"
      >
        featured video
      </h3>
      <div
        class="flex gap-1"
      >
        <form>
          <label
            aria-disabled="true"
            class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium p-0 css-1jvz5sr-MuiButtonBase-root-MuiIconButton-root"
            role="button"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
              data-testid="AttachFileIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.5 6v11.5c0 2.21-1.79 4-4 4s-4-1.79-4-4V5c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5v10.5c0 .55-.45 1-1 1s-1-.45-1-1V6H10v9.5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V5c0-2.21-1.79-4-4-4S7 2.79 7 5v12.5c0 3.04 2.46 5.5 5.5 5.5s5.5-2.46 5.5-5.5V6z"
              />
            </svg>
            <input
              accept="video/mp4, video/webm, video/quicktime, video/x-msvideo, video/x-matroska, video/ogg"
              hidden=""
              name="uploadFile"
              type="file"
            />
          </label>
        </form>
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1af78t4-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="CheckIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
            />
          </svg>
        </button>
        <button
          aria-label="Close"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1jvz5sr-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="CloseIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="group cursor-pointer  duration-300 hover:bg-(--color-hover-alt) "
    >
      <div
        class="grid min-h-11 w-full grid-cols-1 items-start gap-y-2 duration-300"
      >
        <div
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated flex items-center gap-3 css-1xlwe7e-MuiFormLabel-root-MuiInputLabel-root"
        >
          featuredVideoTitle.label
           
        </div>
        <div
          class="flex justify-between"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary mr-2 w-full justify-between p-0 css-zmd0ac-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            <span
              class="flex gap-1 flex-row"
            >
              <span>
                actions.add
              </span>
              <span>
                featuredVideoTitle.label
              </span>
            </span>
            <span
              class="MuiButton-icon MuiButton-endIcon MuiButton-iconSizeMedium css-1wyk03i-MuiButton-endIcon"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium opacity-0 group-hover:opacity-100 css-1umw9bq-MuiSvgIcon-root"
                data-testid="AddIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="group cursor-pointer  duration-300 hover:bg-(--color-hover-alt) "
    >
      <div
        class="grid min-h-11 w-full grid-cols-1 items-start gap-y-2 duration-300"
      >
        <div
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated flex items-center gap-3 css-1xlwe7e-MuiFormLabel-root-MuiInputLabel-root"
        >
          featuredVideoUrl.label
           
        </div>
        <div
          class="flex justify-between"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary mr-2 w-full justify-between p-0 css-zmd0ac-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            <span
              class="flex gap-1 flex-row"
            >
              <span>
                actions.add
              </span>
              <span>
                featuredVideoUrl.label
              </span>
            </span>
            <span
              class="MuiButton-icon MuiButton-endIcon MuiButton-iconSizeMedium css-1wyk03i-MuiButton-endIcon"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium opacity-0 group-hover:opacity-100 css-1umw9bq-MuiSvgIcon-root"
                data-testid="AddIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="group cursor-pointer  duration-300 hover:bg-(--color-hover-alt) "
    >
      <div
        class="grid min-h-11 w-full grid-cols-1 items-start gap-y-2 duration-300"
      >
        <div
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated flex items-center gap-3 css-1xlwe7e-MuiFormLabel-root-MuiInputLabel-root"
        >
          featuredVideoWidth.label
           
        </div>
        <div
          class="flex justify-between"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary mr-2 w-full justify-between p-0 css-zmd0ac-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            <span
              class="flex gap-1 flex-row"
            >
              <span>
                actions.add
              </span>
              <span>
                featuredVideoWidth.label
              </span>
            </span>
            <span
              class="MuiButton-icon MuiButton-endIcon MuiButton-iconSizeMedium css-1wyk03i-MuiButton-endIcon"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium opacity-0 group-hover:opacity-100 css-1umw9bq-MuiSvgIcon-root"
                data-testid="AddIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="group cursor-pointer  duration-300 hover:bg-(--color-hover-alt) "
    >
      <div
        class="grid min-h-11 w-full grid-cols-1 items-start gap-y-2 duration-300"
      >
        <div
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated flex items-center gap-3 css-1xlwe7e-MuiFormLabel-root-MuiInputLabel-root"
        >
          featuredVideoHeight.label
           
        </div>
        <div
          class="flex justify-between"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary mr-2 w-full justify-between p-0 css-zmd0ac-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            <span
              class="flex gap-1 flex-row"
            >
              <span>
                actions.add
              </span>
              <span>
                featuredVideoHeight.label
              </span>
            </span>
            <span
              class="MuiButton-icon MuiButton-endIcon MuiButton-iconSizeMedium css-1wyk03i-MuiButton-endIcon"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium opacity-0 group-hover:opacity-100 css-1umw9bq-MuiSvgIcon-root"
                data-testid="AddIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EditFeaturedVideoForm > renders with all values > EditFeaturedVideoForm - filled 1`] = `
<div>
  <div
    class="m-4 flex max-w-full flex-col gap-(--default-gap) rounded-xl bg-(--color-form-background) lg:my-4 lg:ml-0.5"
    style="opacity: 0; height: 0px;"
  >
    <div
      class="flex justify-between"
    >
      <h3
        class="MuiTypography-root MuiTypography-h2 flex items-center gap-1 text-(--color-typography) css-10p1e2f-MuiTypography-root"
      >
        featured video
      </h3>
      <div
        class="flex gap-1"
      >
        <a
          class="m-auto"
          download="https://example.com/video.mp4"
          href="https://example.com/video.mp4"
          rel="noopener noreferrer"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-hxgng1-MuiSvgIcon-root"
            data-testid="DownloadIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 20h14v-2H5zM19 9h-4V3H9v6H5l7 7z"
            />
          </svg>
        </a>
        <form>
          <label
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium p-0 css-1jvz5sr-MuiButtonBase-root-MuiIconButton-root"
            role="button"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
              data-testid="AttachFileIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.5 6v11.5c0 2.21-1.79 4-4 4s-4-1.79-4-4V5c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5v10.5c0 .55-.45 1-1 1s-1-.45-1-1V6H10v9.5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V5c0-2.21-1.79-4-4-4S7 2.79 7 5v12.5c0 3.04 2.46 5.5 5.5 5.5s5.5-2.46 5.5-5.5V6z"
              />
            </svg>
            <input
              accept="video/mp4, video/webm, video/quicktime, video/x-msvideo, video/x-matroska, video/ogg"
              hidden=""
              name="uploadFile"
              type="file"
            />
          </label>
        </form>
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1af78t4-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="CheckIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
            />
          </svg>
        </button>
        <button
          aria-label="Close"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1jvz5sr-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="CloseIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="group cursor-pointer  duration-300 hover:bg-(--color-hover-alt) "
    >
      <div
        class="grid min-h-11 w-full grid-cols-1 items-start gap-y-2 duration-300"
      >
        <div
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated flex items-center gap-3 css-1xlwe7e-MuiFormLabel-root-MuiInputLabel-root"
        >
          featuredVideoTitle.label
           
        </div>
        <div
          class="flex justify-between"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-pucm0b-MuiTypography-root"
          >
            Promo Video
          </p>
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium opacity-0 group-hover:opacity-100 css-1rio2pg-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="EditIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="group cursor-pointer  duration-300 hover:bg-(--color-hover-alt) "
    >
      <div
        class="grid min-h-11 w-full grid-cols-1 items-start gap-y-2 duration-300"
      >
        <div
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated flex items-center gap-3 css-1xlwe7e-MuiFormLabel-root-MuiInputLabel-root"
        >
          featuredVideoUrl.label
           
        </div>
        <div
          class="flex justify-between"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-pucm0b-MuiTypography-root"
          >
            https:youtube.com/watch?v=test
          </p>
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium opacity-0 group-hover:opacity-100 css-1rio2pg-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="EditIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="group cursor-pointer  duration-300 hover:bg-(--color-hover-alt) "
    >
      <div
        class="grid min-h-11 w-full grid-cols-1 items-start gap-y-2 duration-300"
      >
        <div
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated flex items-center gap-3 css-1xlwe7e-MuiFormLabel-root-MuiInputLabel-root"
        >
          featuredVideoWidth.label
           
        </div>
        <div
          class="flex justify-between"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-pucm0b-MuiTypography-root"
          >
            1920
          </p>
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium opacity-0 group-hover:opacity-100 css-1rio2pg-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="EditIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="group cursor-pointer  duration-300 hover:bg-(--color-hover-alt) "
    >
      <div
        class="grid min-h-11 w-full grid-cols-1 items-start gap-y-2 duration-300"
      >
        <div
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated flex items-center gap-3 css-1xlwe7e-MuiFormLabel-root-MuiInputLabel-root"
        >
          featuredVideoHeight.label
           
        </div>
        <div
          class="flex justify-between"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-pucm0b-MuiTypography-root"
          >
            1080
          </p>
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium opacity-0 group-hover:opacity-100 css-1rio2pg-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="EditIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
